[package]
name = "apcstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
midir = "0.7.0"
obws = "0.4.0"
tokio = {version = "1.15.0", features=["full"]}
anyhow = "1.0.53"
serde = "1.0.117"
serde_yaml = "0.8.13"